<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        tools:context="com.ismos_salt_erp.view.fragment.accounts.PaymentInstructionListFragment">

        <include
            android:id="@+id/appbar"
            layout="@layout/toolbar_binding" />


        <net.cachapa.expandablelayout.ExpandableLayout
            android:id="@+id/expandableView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/appbar"
            app:el_duration="800"
             app:el_parallax=".5">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:backgroundTint="@color/white"
                        android:elevation="2dp"

                        app:cardCornerRadius="5dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="horizontal"
                                android:weightSum="2">

                                <LinearLayout
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="5dp"
                                    android:layout_weight="1"
                                    android:gravity="center_vertical"
                                    android:orientation="vertical"
                                    android:weightSum="2">

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_weight="1"
                                        android:maxLines="1"
                                        android:singleLine="true"
                                        android:text="@string/start_date"
                                        android:textColor="@color/switch_color"
                                        android:textSize="14sp" />

                                    <TextView
                                        android:id="@+id/startDate"
                                        android:layout_width="match_parent"
                                        android:layout_height="35dp"
                                        android:layout_weight="1"
                                        android:background="@drawable/edittext_shape"
                                        android:gravity="center_vertical"
                                        android:hint="mm/dd/YY"
                                        android:paddingLeft="10dp"
                                        android:textColor="@color/black"
                                        android:textColorHint="@color/gray"
                                        android:textSize="13.5sp" />

                                </LinearLayout>

                                <LinearLayout
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="5dp"
                                    android:layout_weight="1"
                                    android:gravity="center_vertical"
                                    android:orientation="vertical"
                                    android:weightSum="2">

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_weight="1"
                                        android:maxLines="1"
                                        android:singleLine="true"
                                        android:text="@string/end_date"
                                        android:textColor="@color/switch_color" />

                                    <TextView
                                        android:id="@+id/endDate"
                                        android:layout_width="match_parent"
                                        android:layout_height="35dp"
                                        android:layout_weight="1"
                                        android:background="@drawable/edittext_shape"
                                        android:gravity="center_vertical"
                                        android:hint="mm/dd/YY"
                                        android:paddingLeft="10dp"
                                        android:textColor="@color/black"
                                        android:textColorHint="@color/gray"
                                        android:textSize="13.5sp" />

                                </LinearLayout>


                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <LinearLayout
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="5dp"
                                    android:layout_marginRight="5dp"
                                    android:layout_weight="1"
                                    android:orientation="vertical">

                                    <TextView
                                        android:id="@+id/spinner"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:text="Select Supplier"
                                        android:textColor="@color/switch_color"
                                        android:textSize="14sp" />


                                    <LinearLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="35dp"
                                        android:layout_marginTop="1dp"
                                        android:background="@drawable/edittext_shape">

                                        <ScrollView
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content">


                                            <com.chivorn.smartmaterialspinner.SmartMaterialSpinner
                                                android:id="@+id/supplier"
                                                app:smsp_isSearchable="true"
                                                app:smsp_searchTextColor="@color/black"
                                                app:smsp_arrowPaddingLeft="10dp"
                                                app:smsp_searchHintColor="@color/gray"
                                                app:smsp_dismissSearchText="cross"
                                                app:smsp_enableSearchHeader="false"
                                                android:layout_width="match_parent"
                                                android:layout_height="wrap_content"
                                                android:layout_marginLeft="1dp"
                                                android:layout_marginTop="5dp"
                                                android:layout_marginRight="1dp"
                                                android:layout_marginBottom="1dp"
                                                android:defaultFocusHighlightEnabled="false"
                                                android:paddingLeft="5dp"
                                                android:soundEffectsEnabled="false"
                                                app:smsp_enableErrorLabel="false"
                                                app:smsp_enableFloatingLabel="false"
                                                app:smsp_floatingLabelColor="@color/white"
                                                app:smsp_hint=" Select"
                                                app:smsp_itemListColor="#808080"

                                                app:smsp_itemListHintBackgroundColor="#808080"
                                                app:smsp_itemListHintColor="#FFFFFF"
                                                app:smsp_multilineError="false"
                                                app:smsp_selectedItemListColor="#FF5252"
                                                app:smsp_underlineSize="0dp" />


                                        </ScrollView>
                                    </LinearLayout>


                                </LinearLayout>


                            </LinearLayout>


                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:orientation="horizontal"
                                android:weightSum="2">


                                <Button
                                    android:id="@+id/filterSearchBtn"
                                    android:layout_width="0dp"
                                    android:layout_height="30dp"
                                    android:layout_marginLeft="5dp"
                                    android:layout_marginTop="5dp"
                                    android:layout_weight="1"
                                    android:background="@drawable/filter_btn_shape"
                                    android:paddingLeft="3dp"
                                    android:text="Search"
                                    android:textAllCaps="false"
                                    android:textSize="12sp" />

                                <Button
                                    android:id="@+id/resetBtn"
                                    android:layout_width="0dp"
                                    android:layout_height="30dp"
                                    android:layout_marginLeft="5dp"
                                    android:layout_marginTop="5dp"
                                    android:layout_marginRight="5dp"
                                    android:layout_marginBottom="5dp"
                                    android:layout_weight="1"
                                    android:background="@drawable/filter_reset_btn_shape"
                                    android:paddingLeft="3dp"
                                    android:text="Reset"
                                    android:textAllCaps="false"
                                    android:textSize="12sp" />
                            </LinearLayout>

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>
                </LinearLayout>


            </LinearLayout>


        </net.cachapa.expandablelayout.ExpandableLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/payment_instruction_list_rv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/amountLayout"

            android:layout_below="@+id/expandableView" />

        <TextView
            android:id="@+id/noDataFound"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/amountLayout"
            android:layout_below="@+id/expandableView"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="23sp"
            android:visibility="gone"
            tools:text="No data found" />

        <LinearLayout
            android:id="@+id/amountLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="5dp"
            android:visibility="gone"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/total_bdt"
                    android:textColor="@color/black"
                    android:textSize="@dimen/fourteen_sp_text_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/totalAmount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:paddingRight="5dp"
                    android:text="0.0000"
                    android:textColor="@color/black"
                    android:textSize="@dimen/fourteen_sp_text_size"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/total_paid_bdt"
                    android:textColor="@color/black"
                    android:textSize="@dimen/fourteen_sp_text_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/totalPaid"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:paddingRight="5dp"
                    android:text="0.0000"
                    android:textColor="@color/black"
                    android:textSize="@dimen/fourteen_sp_text_size"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/total_due_bdt"
                    android:textColor="@color/black"
                    android:textSize="@dimen/fourteen_sp_text_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/totalDue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:paddingRight="5dp"
                    android:text="0.0000"
                    android:textColor="@color/black"
                    android:textSize="@dimen/fourteen_sp_text_size"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/payment_limit_bdt"
                    android:textColor="@color/black"
                    android:textSize="@dimen/fourteen_sp_text_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/paymentLimit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:paddingRight="5dp"
                    android:text="0.0000"
                    android:textColor="@color/black"
                    android:textSize="@dimen/fourteen_sp_text_size"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>


    </RelativeLayout>
</layout>